hh/vDSP.h

    /*  Define types:

            vDSP_Length for numbers of elements in arrays and for indices of
            elements in arrays.  (It is also used for the base-two logarithm of
            numbers of elements, although a much smaller type is suitable for
            that.)

            vDSP_Stride for differences of indices of elements (which of course
            includes strides).
    */
    typedef unsigned long vDSP_Length;
typedef long long vDSP_Stride;
typedef long vDSP_Stride;
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n] - B[n];
*/

// Vector convert between double precision and single precision.
extern void vDSP_vdpsp(const double *__A, vDSP_Stride __IA, float *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vspdp(const float *__A, vDSP_Stride __IA, double *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    Let S be the number of times the sign bit changes in the sequence A[0],
    A[1],... A[N-1].

    If B <= S:
        D[0] is set to B.
        C[0] is set to n*IA, where the B-th sign bit change occurs between
        elements A[n-1] and A[n].
    Else:
        D[0] is set to S.
        C[0] is set to 0.
*/

// Convert rectangular to polar.
extern void vDSP_polar(const float *__A, vDSP_Stride __IA, float *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_polarD(const double *__A, vDSP_Stride __IA, double *__C,
                        vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  Strides are shown explicitly in pseudocode.

    These compute:

        for (n = 0; n < N; ++n)
        {
            x = A[n*IA+0];
            y = A[n*IA+1];
            C[n*IC+0] = sqrt(x**2 + y**2);
            C[n*IC+1] = atan2(y, x);
        }
*/

// Convert polar to rectangular.
extern void vDSP_rect(const float *__A, vDSP_Stride __IA, float *__C,
                      vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_rectD(const double *__A, vDSP_Stride __IA, double *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        p = 0;
        for (n = 0; n < N; ++n)
            if (B[n] != 0)
                C[p++] = A[n];
*/

// Vector convert to decibels, power, or amplitude.
extern void vDSP_vdbcon(const float *__A, vDSP_Stride __IA, const float *__B,
                        float *__C, vDSP_Stride __IC, vDSP_Length __N,
                        unsigned int __F) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vdbconD(const double *__A, vDSP_Stride __IA, const double *__B,
                         double *__C, vDSP_Stride __IC, vDSP_Length __N,
                         unsigned int __F) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = B[0] * (float)A[n];
*/

// Vector convert to integer, round to nearest.
extern void vDSP_vfixr8(const float *__A, vDSP_Stride __IA, char *__C,
                        vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vfixr16(const float *__A, vDSP_Stride __IA, short *__C,
                         vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vfixr32(const float *__A, vDSP_Stride __IA, int *__C,
                         vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = rint(A[n]);

    Note:  It is expected that the global rounding mode be the default,
    round-to-nearest.  It is unspecified whether ties round up or down.
*/

// Vector convert to floating-point from integer.
extern void vDSP_vflt8(const char *__A, vDSP_Stride __IA, float *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vflt16(const short *__A, vDSP_Stride __IA, float *__C,
                        vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vflt32(const int *__A, vDSP_Stride __IA, float *__C,
                        vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vfltu8(const unsigned char *__A, vDSP_Stride __IA, float *__C,
                        vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vfltu16(const unsigned short *__A, vDSP_Stride __IA,
                         float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vfltu32(const unsigned int *__A, vDSP_Stride __IA, float *__C,
                         vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));